--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "http://Maneira3232.github.io/Portfolio3",
   "name": "portfolio3",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  }
+  ,
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
   
 }
