--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -40,10 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  ,
+  },
   "devDependencies": {
     "gh-pages": "^2.1.1"
   }
-  
 }
