--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.5.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
